# Orbit

./: .gitignore  Cargo.toml  README.md  colors.json
assets/: diskUsage  white
crates/app/: Cargo.toml  build.rs
crates/app/qml/: main.qml
crates/app/qml/components/: AboutDialog.qml  BusySnackbar.qml  Button.qml  ButtonGroup.qml  CommandPalette.qml  ConfirmDialog.qml  ConflictDialog.qml  ContextMenu.qml  DecorativeShapesBackground.qml  DiskUsageDialog.qml  DuplicatesDialog.qml  EmptyState.qml  Fab.qml  FabMenu.qml  FileGridItem.qml  FileListItem.qml  GaugeProgress.qml  GroupCard.qml  Icon.qml  ItemContextMenu.qml  LinearWavyProgressBar.qml  M3Slider.qml  ModalTransition.qml  NewFileDialog.qml  NewFolderDialog.qml  OpenWithDialog.qml  PathBar.qml  PinnedContextMenu.qml  PreviewPane.qml  PropertiesDialog.qml  RenameDialog.qml  Ripple.qml  ScrollBar.qml  SelectionBadge.qml  SelectionToolbar.qml  SettingsDialog.qml  ShapeLoader.qml  Sidebar.qml  Snackbar.qml  SplitButton.qml  (+6 more)
crates/app/qml/shapes/: MorphShape.qml  ShapeCanvas.qml  material-shapes.js
crates/app/qml/tokens/: Color.qml  Elevation.qml  Motion.qml  Shape.qml  Type.qml
crates/app/qml/util/: format.js
crates/app/src/: file_list_model.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: apps.rs  archive.rs  duplicates.rs  entry.rs  lib.rs  listing.rs  mime.rs  ops.rs  paths.rs  rules.rs  settings.rs  thumbnails.rs  trash.rs  volumes.rs  watcher.rs
crates/core/tests/: apps.rs  archive.rs  duplicates.rs  entry.rs  listing.rs  mime.rs  ops.rs  paths.rs  rules.rs  settings.rs  thumbnails.rs  trash.rs  volumes.rs  watcher.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: optimization-roadmap.md  ui-ux-roadmap-2.md  ui-ux-roadmap.md
docs/superpowers/plans/: 2026-07-03-filemanager-backend-core.md  2026-07-03-filemanager-bridge-shell.md  2026-07-03-filemanager-m3-expressive.md  2026-07-04-action-keyboard-shortcuts.md  2026-07-04-drag-and-drop.md  2026-07-04-error-surfacing.md  2026-07-04-live-directory-watching.md  2026-07-04-multi-select.md  2026-07-04-restore-from-trash.md  2026-07-04-shape-expressive-ui.md  2026-07-04-undo-redo.md  2026-07-05-component-upgrades.md  2026-07-05-expressive-feedback.md  2026-07-05-navigation-and-states.md  2026-07-06-async-folder-size-and-storage-gauges.md  2026-07-06-phone-volumes-and-live-mounts.md
docs/superpowers/specs/: 2026-07-03-filemanager-design.md  2026-07-04-action-keyboard-shortcuts-design.md  2026-07-04-drag-and-drop-design.md  2026-07-04-error-surfacing-design.md  2026-07-04-live-directory-watching-design.md  2026-07-04-multi-select-design.md  2026-07-04-restore-from-trash-design.md  2026-07-04-selection-badge-removal-and-content-shapes-design.md  2026-07-04-shape-expressive-ui-design.md  2026-07-04-undo-redo-design.md  2026-07-05-component-upgrades-design.md  2026-07-05-expressive-feedback-design.md  (+3 more)
