[package]
name = "fm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6"
mime_guess = "2"
infer = "0.16"
libc = "0.2"
dirs = "5"
time = { version = "0.3", features = ["formatting"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
