[package]
name = "fm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6"
mime_guess = "2"
infer = "0.16"
libc = "0.2"
dirs = "5"
time = { version = "0.3", features = ["formatting"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "ico", "webp", "tiff"] }
resvg = "0.44"
png = "0.17"
md5 = { package = "md-5", version = "0.10" }
percent-encoding = "2"

[dev-dependencies]
tempfile = "3"
